--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,11 @@ subprojects {
 	test {
 		useJUnitPlatform()
 	}
-
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	}
 	dependencyManagement {
 		imports {
 			mavenBom('org.springframework.boot:spring-boot-dependencies:2.4.1')
