--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,25 +1,29 @@
 group 'com.example.service.user.infrastructure'
 version '1.0.0'
 
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.assertj:assertj-core:3.18.0'
     implementation 'org.liquibase:liquibase-core'
     implementation 'com.h2database:h2'
 
-
-
-    implementation group: 'mysql', name: 'mysql-connector-java', version: "8.0.12"
-
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.18.0'
+    testImplementation 'com.tngtech.archunit:archunit-junit5:0.14.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'commons-io:commons-io:2.6'
-    implementation group: 'com.google.code.gson', name: 'gson', version: "2.8.5"
 
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.tngtech.archunit:archunit-junit5:0.14.1'
     implementation project(':domain')
 
     compileOnly 'org.projectlombok:lombok'
